
include $(top_srcdir)/common.mk

lib_LIBRARIES = libodtone_mihf.a

libodtone_mihf_a_SOURCES = service_management.cpp \
	service_access_controller.cpp \
	event_service.cpp \
	generic_server.cpp \
	comm_handler.cpp \
	mihf.cpp \
	transaction.cpp \
	net_sap.cpp \
	transaction_manager.cpp \
	dst_transaction.cpp \
	mihfid.cpp \
	src_transaction.cpp \
	transaction_ack_service.cpp \
	transmit.cpp \
	log.cpp \
	local_transactions.cpp \
	command_service.cpp \
	information_service.cpp \
	utils.cpp

